jython-cli with examples